--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
-    "framer-motion": "^12.4.1",
+    "framer-motion": "^12.4.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-lazyload": "^3.2.1",
+    "react-type-animation": "^3.2.0",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
